--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ data/raw
 data/partitioned
 data/occluded
 data/occluded_full
-trained_model/
+pretrained_weights/
 
 
 # Byte-compiled / optimized / DLL files
