--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 ####
 
 data/
-data/raw
-data/partitioned
-data/occluded
-data/occluded_full
-data/reduced
+data/backup/raw
+data/backup/partitioned
+data/backup/occluded
+data/backup/occluded_full
+data/backup/reduced
 
 pretrained_weights/
 
